Undo revision 28409 by [[Special:Contributions/119.2.125.143|119.2.125.143]] ([[User talk:119.2.125.143|talk]])оформление

--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -1,4 +1,6 @@
-[[File:Shabdrung r
+[[File:Shabdrung rubin.png|thumb|right|200px|ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ]]
+
+[[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།]] (1594-1651)
 
 ༈ སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་རྗེ་བླ་མ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་སྐུ་མཆོད།
 
@@ -51,6 +53,7 @@
 སྐྱབས་མགོན་ཆོས་ཀྱི་རྒྱལ་པོ་དཔལ་འབྲུག་པ་རིན་པོ་ཆེ་མཆོག་ སྐུ་དངོས་ཀྱི་གདུལ་བྱའི་འགྲོ་དོན་མཛད་བྱ་མཇུག་བཟུམ་ཅི་ སྐུ་མཐའ་མའི་མཛད་པ་ཨིན། དེ་ཡང་ཨུ་རྒྱན་མཧཱ་གུ་རུ་སློབ་དཔོན་ཆེན་པོ་པདྨ་འབྱུང་གནས་མཆོག་གིས་ སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ རིམ་གཉིས་རྣལ་འབྱོར་ལུ་བཞུགས་པ་ཅིན་ དམག་མཐའ་མཇུག་ལས་བཟློག་སྟེ་ སངས་རྒྱས་ཀྱི་བསྟན་པ་གོང་དུ་འཕེལ་འོང་ཟེར་བའི་ལུང་གིས་བསྐུལ། དཔལ་མགོན་ལྕམ་དྲལ་ཆོས་སྲུང་དྲེགས་པ་སྡེ་བརྒྱད་ཀྱི་ཚོགས་དང་བཅས་པའི་ཕྱོགས་ལས་ཡང་ དེ་བཟུམ་གྱི་གསོལ་བ་བཏབ་པ་ལས་བརྟེན་ ཐུགས་དམ་ལུ་བཞུགས་དགོཔ་ངེས་བརྟན་ཨིནམ་དགོངས་ཏེ། དགུང་ལོ་༥༨ བཞེས་པའི་ སྤྱི་ལོ་༡༦༥༡ དང་རབ་བྱུང་༡༡ པའི་ལྕགས་ཡོས་ ཧོར་ཟླ་གསུམ་པའི་ཡར་ངོ་ཚེས་བཅུའི་དུས་ཆེན་ལུ། བདག་ཅག་གི་སྐྱབས་མགོན་ངག་དབང་རྣམ་རྒྱལ་མཆོག་ ཐུགས་དམ་ལུ་བཞུགས་ནམ་དུས་ཞལ་སྔ་ནས། ད་རེས་ཁམས་ཅིག་ཕྱི་ནང་གི་བཀའ་བློན་ལས་འཛིན་རྣམས་དང༌། གྲྭ་ཚང་གི་གནས་བརྟན་དབུ་མཛད་ཆོས་ཁྲིམས་སོགས་ རྒན་གཞོན་སྐུ་བགྲེས་ཚུ་དང༌། གྲྭ་པ་དམངས་མང་སོགས་ སྤྱི་སྒེར་ཐམས་ཅད་ལུ་ ངེའི་ངོ་ལས་ལོ་རྒྱུས་ཅིག་གྲོས་བསྟུན་འབད་དགོཔ་ཨིན་རུང་ ཁམས་མ་དྭངས་བ་ལས་ དབུ་མཛད་ཁྱོད་ཀྱིས་གཞན་རྣམས་ལུ་ དེ་ལུགས་བཀོད་རྒྱ་ ཀུན་ལུ་ཁྱབ་དགོ་ཟེར་ བསྟན་པའི་བྱ་བ་ཕྲ་རགས་ཐམས་ཅད་ལུ་ བསླབ་སྟོན་ཞིབ་དཔྱད་ཀྱི་བཅད་དོན་རྒྱས་དགོཔ་དང༌། འདས་མ་འོངས་ཀྱི་ལོ་རྒྱུས་མཐའ་རྒྱས་དང་བཅས་པའི་ ཞལ་ཆེམས་ལུང་བསྟན་ཞིབ་ཞིབ་བསྩལ་སྟེ་ སྐུ་མཚམས་འོད་གསལ་ཆེན་པོའི་ཏིང་ངེ་འཛིན་གྱི་རྣལ་འབྱོར་ལུ་རིམ་གྱིས་བཞུགས་ནུག །
 
 དེ་ལས་ཚུར་ལོ་ངོ་མང་རབས་ཅིག་ སྐྱབས་མགོན་རིན་པོ་ཆེ་སྐུ་མཚམས་བཞུགས་པའི་ཚུལ་སྦེ་ དགོངས་རྫོགས་མ་སྒྲུབ་རུང་ རྒྱལ་སྲས་ཀུན་དགའ་རྒྱལ་མཚན་གྱིས་ སྐུ་གསུང་ཐུགས་ཀྱི་སྤྲུལ་པ་འབྱོན་དགོ་པའི་གསོལཝ་བཏབ་ད་ ཐུགས་དམ་གྲོས་ཞིནམ་ལས་ཚུར་ ལོ་བསྟར་ཟླཝ་༣ པའི་ཚེས་༡༠ ལུ་ སྐྱབས་མགོན་རིན་པོ་ཆེ་དཔལ་ངག་དབང་རྣམ་རྒྱལ་མཆོག་གི་སྐུ་མཆོད་བཟུང་ནི་འགོ་བཙུགས་ནུག ། ཧེ་མའི་སྐབས་ཅིག་ལུ་ སྐུ་མཆོད་ཉིནམ་གསུམ་ར་ཨིན་རུང་། མཁན་རབས་༦༩ པ་སྐྱབས་རྗེ་དགེ་འདུན་རིན་ཆེན་མཆོག་གི་སྐུ་ཐོག་ལུ་ ཉིན་གྲངས་ཡར་སེང་གནང་སྟེ་ ད་རེས་སྐུ་མཆོད་ཟླཝ་༣ པའི་ཚེས་༡༥ ཚུན་ སྔར་ལས་རྒྱས་རྒྱས་སྦེ་བཟུང་སྲོལ་ཡོད། ལགས་སོ།།
+
 
 == འབྲེལ་གཏུགས ==
 
