*Empty MediaWiki Message*

--- a/ཊི་བི་ལི་སི.mw
+++ b/ཊི་བི་ལི་སི.mw
@@ -1,4 +1,4 @@
-[[File:Seal of Tbilisi, Georgia.svg|150px]][[File:Flag of Tbilisi.svg|150px]]
+[[File:Seal of Tbilisi, Georgia.svg|150px]][[File:Flag of Tbilisi.svg|154x154px]]
 
 [[File:Tbilisi sunset-6.jpg|700px]]
 
