*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -71,3 +71,14 @@
 		<span style="display: inline-block; height: 2rem; line-height: 2rem; padding-left: .5rem; padding-right: 1rem; margin: .6rem 0; border-radius: 0 1rem 1rem 0; background-color: #EBEBEB;">'''སྐད་རིགས་གཞན།'''</span></div>
 	<div style="clear: both; margin: 0 20px;">
 {{གཞན།. ཁ་སྐད། ཁ། སྐད་ཡིག}}</div>
+
+
+
+{| id="mp-bottom" | 
+<!---categories -->
+
+! style="background:#FFDEAD; border:1px solid #EECFA1; border-right:0px; padding:0px; vertical-align:middle; font-weight:normal; width:100%;" | <h3 class="mp"> [[चित्र:Nuvola apps bookcase.png|25px|alt=|link=]] ज्ञानकोश</h3>
+! style="background:#FFDEAD; border:1px solid #EECFA1; border-left:0px; padding:0px; vertical-align:middle;" | <div style="float:right;">[[File:Wikibar.png|90px|alt=|link=]]</div>
+|-
+| colspan=2 style="padding:15px 5px" | <div style="text-align:left;">{{मुखपृष्श्कोष}</div>
+|}
