--- a/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
+++ b/འཛམ་གླིང་རྒྱལ་ཁབ་དག་གི་མིང་རྫོང་དབྱིན་རྒྱ་གསུམ་ཤན་བསྦྱར.mw
@@ -42,7 +42,7 @@
 * '''[[བྷོལ་ག་རི་ཡ་]]''' - བྷོལ་ག་རི་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ། – Republic of Bulgaria 保加利亚
 * '''[[བྷུར་ཁེ་ན་ཧྥ་སོ་]]''' – བྷུར་ཁེ་ན་ཧྥ་སོ Burkina Faso 布基纳法索
 * '''[[ བྷོ་རུན་ཌེ་]]''' – བྷུ་རུན་ཌེ་སྤྱི་མཐུན་རྒྱལ་ཁབ་ Republic of Burundi 布隆迪共和国
-* '''[[འབར་མ་]]''' - འབར་མ་མནའ་མཐུན་རྒྱལ་ཁབ།  མེན་མཱར་མནའ་མཐུན་རྒྱལ་ཁབ – Burma / Mianmar 缅甸
+* '''[[འབར་མ་]]''' - འབར་མ་མནའ་མཐུན་རྒྱལ་ཁབ།  མེན་མཱར་མནའ་མཐུན་རྒྱལ་ཁབ – Burma / Myanmar 缅甸
 
 = ཀ/ས་ (C) =
 * '''[[ཁམ་བྷོ་ཌི་ཡ་]]''' – ཁམ་བྷོ་ཌི་ཡ་སྤྱི་མཐུན་རྒྱལ་ཁབ Kingdom of Cambodia 柬埔寨
