--- a/རྗེ་བརྩུན་པདྨ.mw
+++ b/རྗེ་བརྩུན་པདྨ.mw
@@ -19,7 +19,7 @@
 }}
 
 -->
-[[File:Dragon Queen of Bhutan (cropped).jpg|thumb|རྗེ་བརྒྱུད་པདྨ]]
+[[File:Dragon Queen of Bhutan (cropped).jpg|thumb|རྗེ་བརྩུན་པདྨ]]
 མི་དབང་འབྲུག་རྒྱལ་བཙུན'རྗེ་བརྒྱུད་པདྨ'དབང་ཕྱུག   [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 
 {{translate}}
