Corrected name spelling

--- a/རྗེ་བརྩུན་པདྨ.mw
+++ b/རྗེ་བརྩུན་པདྨ.mw
@@ -20,7 +20,7 @@
 
 -->
 [[File:Dragon Queen of Bhutan (cropped).jpg|thumb|རྗེ་བརྩུན་པདྨ]]
-མི་དབང་འབྲུག་རྒྱལ་བཙུན'རྗེ་བརྒྱུད་པདྨ'དབང་ཕྱུག   [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
+མི་དབང་འབྲུག་རྒྱལ་བཙུན'རྗེ་བརྩུན་པདྨ'དབང་ཕྱུག   [[འཇིགས་མེད་ཁེ་སར་རྣམ་རྒྱལ་དབང་ཕྱུག]]
 
 {{translate}}
 {{stub}}
