--- a/ཨཕ་ག་ནིསི་ཏཱན་.mw
+++ b/ཨཕ་ག་ནིསི་ཏཱན་.mw
@@ -1,5 +1,5 @@
 [[File:National emblem of Afghanistan.svg|right|150px]]
-[[File:Flag of Afghanistan.svg|right|200px]]
+[[File:Flag of Afghanistan (2013–2021).svg|right|200px]]
 [[File:Afghanistan in its region.svg|right|thumb|280px|ཨཕ་ག་ནིསི་ཏཱན་]]
 
 '''ཨཕ་ག་ནིསི་ཏཱན''' 
