/* ཟིན་ཐོ་འམ་དཔྱད་གཞི། */Fix

--- a/རྡ་རམ་ས་ལ།.mw
+++ b/རྡ་རམ་ས་ལ།.mw
@@ -34,6 +34,13 @@ File:Looking down over Dharamsala and Beas River.jpg|
 [[File:Dharamsala-valley.jpg|thumb|200px|]]
 
 == ཟིན་ཐོ་འམ་དཔྱད་གཞི། ==
+
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
+
 == ད་དུང་གཟིགས། ==
 == ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
 * [http://wapexclusive.com.ng/]
