*Empty MediaWiki Message*

--- a/ཕྱག་འཚལ་བའི་དགོས་པའི་དོན་.mw
+++ b/ཕྱག་འཚལ་བའི་དགོས་པའི་དོན་.mw
@@ -1,3 +1,8 @@
 སྒོམ་སྡེ་ལྷ་རམས་པས།
 
 སྤྱིར་ཕྱག་འཚལ་ཞེས་པ་ནི།ལེགས་སྦྱར་དུ་ན་མ྄་ཞེས་བྱ་བ་སྟེ།གུས་འདུད་བྱེད་པའི་དོན་ཡིན།འདུད་ཅེས་པ་དུད་པའམ་སྒུར་སྒུར་བྱེད་པའི་དོན་ཡིན།ལེགས་སྦྱར་དུ་“ན་མ྄”འམ“པྲ་ཎ་མ྄”ཞེས་པ་སེམས་དང་བའི་སྒོ་ནས་ལུས་དུད་པའམ་སྒུར་སྒུར་བྱེད་པ་ལ་ཟེར།༼ཕྱག་འཚལ་བའི་དགོས་པ་ནི༽དེ་ནི་གཙོ་བོ་ང་རྒྱལ་གྱི་གཉེན་པོ་ཡིན་པས་ང་རྒྱལ་ཆུང་དུ་གཏོང་བའི་ཆེད་ཡིན།བཀའ་གདམས་པ་དགེ་བཤེས་རྣམས་ཀྱིས།ང་རྒྱལ་གྱི་སྒང་བུ་ལ།ཡོན་ཏན་གྱི་ཆུ་མི་ཆགས།ཞེས་ང་རྒྱལ་ནི་རང་རྒྱུད་ལ་ཡོན་ཏན་སྐྱེ་བའི་གེགས་ཀྱི་གཙོ་བོ་ཡིན་པར་གསུངས་པས་དེའི་གཉེན་པོ་བསྟེན་པ་གལ་ཆེའོ།།༼ཕྱག་འཚལ་ཚུལ་ནི༽ཐལ་མོ་བཅར་ལེབ་སྦྱར་ན་མུ་སྟེགས་པའི་ལུགས་ཡིན་པས་མི་རུང་།ཁོང་སྟོང་བྱས་ལ་མཐེ་བོང་གཉིས་ནང་དུ་བཅུག་ནས་ཐལ་མོ་ནོར་བུའི་དབྱིབས་ལྟར་བྱས་ཏེ།རང་གི་སྤྱོ་བོ།མགྲིན་པ།སྙིང་གའི་གནས་གསུམ་ལ་སྦྱར་དགོས།དེ་ནི་སྒོ་གསུམ་གུས་པས་འདུད་པའི་མཚོན་དོན་རེད།ཡང་ན།སྤྱི་བོ་ལ་སྦྱར་བས་སྐུའི་ཡོན་ཏན།མགྲིན་པར་སྦྱར་བས་གསུང་གི་ཡོན་ཏན།སྙིང་གར་སྦྱར་བས་ཐུགས་ཀྱི་ཡོན་ཏན་འགྲུབ་པའི་རྟེན་འབྲེལ་དང་།ཡང་སྤྱི་བོ།དཔྲལ་བ།མགྲིན་པ།སྙིང་ག་སྟེ་གནས་བཞིར་སྦྱར་བའི་དབང་དུ་བྱས་ན།དཔྲལ་བར་སྦྱར་བས་སྐུའི་མཛོད་སྤུ་འགྲུབ་པའི་བག་ཆགས་འཇོག་མཁས་པ་འགས།ཐལ་མོའི་ཁོང་སྟོང་གི་ཆོས་སྐུ་དང་།ནོར་བུ་དབྱིབས་ཀྱིས་གཟུགས་སྐུ་མཚོནཔར་ཡང་གསུང་ངོ་།།ཕྱག་འཚལ་བའི་ཚེ་སྐྱབས་ཡུལ་རང་གི་བླ་མའམ།རྒྱལ་བ་ཤཱཀྱ་ཐུབ་པ་སོགས་དཔག་ཏུ་མེད་པ་སྐུ་གསོན་པོར་བཞུགས་ཡོད་སྙམ་པ་བྱས་ཏེ།བླ་མ་ལ་སྐྱབས་སུ་མཆིའོ།།སངས་རྒྱས་ལ་སྐྱབས་སུ་མཆིའོ།། ཆོས་ལ་སྐྱབས་སུ་མཆིའོ།།དགེ་འདུན་ལ་སྐྱབས་སུ་མཆིའོ།།ཞེས་པའི་སྐྱབས་འགྲོ་བཞི་སྐོར་མ་འདི་བཏོན་ནས་ཕྱག་བྱ་བའམ།ཡང་ན།≪སྤྱི་བཤགས≫ཨུ་ཧུ་ལགས།བླ་མ་རྡོ་རྗེ་འཛིན་པ་ཆེན་པོ་ལ་སོགས་པ་ཕྱོགས་བཅུ་ན་བཞུགས་པའི་སངས་རྒྱས་དང་བྱང་ཆུབ་སེམས་དཔའ་ཐམས་ཅད་དང་།དགེ་འདུན་བཙུན་པ་རྣམས་བདག་ལ་དགོངས་སུ་གསོལ།བདག་མིང་(རང་མིང་གིས་སྨོས)འདི་ཞེས་བགྱི་བས་ཚེ་རབས་འཁོར་བ་ཐོག་མ་མ་མཆིས་པ་ནས་ད་ལྟ་ལ་ཐུག་གི་བར་དུ།ཉོན་མོངས་པ་འདོད་ཆགས་དང་ཞེ་སྡང་དང་གཏི་མུག་གི་དབང་གིས་ལུས་ངག་ཡིད་གསུམ་གྱི་སྒོ་ནས་སྡིག་པ་མི་དགེ་བ་བཅུ་བགྱིས་པ་དང་།མཚམས་མ་མཆིས་པ་ལྔ་བགྱིས་པ་དང་།དེ་དང་ཉེ་བ་ལྔ་བགྱིས་པ་དང་།སོ་སོར་ཐར་པའི་སྡོམ་པ་དང་འགལ་བ་དང་།བྱང་ཆུབ་སེམས་དཔའི་བསླབ་པ་དང་འགལ་བ་དང་།གསང་སྔགས་ཀྱི་དམ་ཚིག་དང་འགལ་བ་དང་།ཕ་དང་མ་ལ་མ་གུས་པ་དང་།མཁན་པོ་དང་སློབ་དཔོན་ལ་མ་གུས་པ་དང་།གྲོགས་ཚངས་པར་མཚུངས་པར་སྤྱོད་པ་རྣམས་ལ་མ་གུས་པ་དང་།དཀོན་མཆོག་གསུམ་ལ་གནོད་པའི་ལས་བགྱིས་པ་དང་།དམ་པའི་ཆོས་སྤངས་པ་དང་།འཕགས་པའི་དགེ་འདུན་ལ་སྐུར་བ་བཏབ་པ་དང་།སེམས་ཅན་ལ་གནོད་པའི་ལས་བགྱིས་པ་ལ་སོགས་པ།སྡིག་པ་མི་དགེ་བའི་ཚོགས་བདག་གིས་བགྱིས་པ་དང་།བགྱིད་དུ་སྩལ་བ་དང་།གཞན་གྱིས་བགྱིས་པ་ལ་རྗེས་སུ་ཡི་རང་བ་ལ་སོགས་པ།མདོར་ན་མཐོ་རིས་དང་ཐར་པའི་གེགས་སུ་གྱུར་ཅིང་འཁོར་བ་དང་ངན་སོང་གི་རྒྱུར་གྱུར་པའི་ཉེས་ལྟུང་གི་ཚོགས་ཅི་མཆིས་པ་ཐམས་ཅད་བླ་མ་རྡོ་རྗེ་འཛིན་པ་ཆེན་པོ་ལ་སོགས་པ་ཕྱོགས་བཅུ་ན་བཞུགས་པའི་སངས་རྒྱས་དང་བྱང་ཆུབ་སེམས་དཔའ་ཐམས་ཅད་དང་།དགེ་འདུན་བཙུན་པ་རྣམས་ཀྱི་སྤྱན་སྔར་མཐོལ་ལོ།།མི་འཆབ་བོ།།འཆགས་སོ།།ཕྱིན་ཆད་ཀྱང་སྡོམ་པར་བགྱིད་ལགས་སོ།།མཐོལ་ཞིང་བཤགས་ན་བདག་བདེ་བ་ལ་རེག་པར་གནས་པར་འགྱུར་གྱི།མ་མཐོལ་མ་བཤགས་ན་ནི་མི་འགྱུར་རོ།།ཞེས་རང་གིས་ཐོགས་མེད་ནས་བསགས་པའི་སྡིག་སྒྲིབ་སྤྱི་དང་།ལྷག་པར་ཚེ་འདིར་བསགས་པའི་སྡིག་སྒྲིབ་རྣམས་དྲན་པར་བྱས་ཏེ།སྔར་བྱས་ལ་འགྱོད་སེམས་དྲག་པོ་དང་།ཕྱིན་ཆད་སྲོག་ལ་བབས་ཀྱང་མི་བྱེད་སྙམ་པའི་ངུ་འཆོར་བའི་ཚོད་ཙམ་གྱི་འགྱོད་བཤགས་དྲག་པོ་བྱས་ན་གཉེན་པོ་ཧ་ཅང་སྟོབས་ཆེ་བས་སྡིག་སྒྲིབ་ངེས་པར་འདག་གོ།དེ་ཡང་རང་གི་སྐྱེ་བ་སྔ་མ་དང་ཕྱི་མའི་སེམས་ཅན་དཔག་ཏུ་མེད་པ་དེ་དག་ད་ལྟ་སྨྲ་ཤེས་དོན་གོ་མིའི་རྣམ་པར་གསལ་བཏབ་སྟེ་རང་གིས་ཕྱག་བྱས་པ་དང་མཉམ་དུ་དེ་དག་གིས་ཀྱང་།འུར་ཆིལ་ལེར་སྐྱབས་འགྲོ་འདོན་ཞིང་ཕྱག་འཚལ་བའི་མོས་པ་བྱས་ན་རང་གི་ལུས་ཀྱིས་ནོན་པའི་ས་འོག་གི་རྡུལ་གྱི་གྲངས་དང་མཉམ་པའི་བསོད་ནམས་དཔག་ཏུ་མེད་པ་འཐོབ་པར་གསུངས་སོ།།ཡང་ལམ་རིམ་སྒོམ་བསྒྲུབ་བྱེད་མཁན་ཞིག་ཡིན་ན།རྗེའི་ཡོན་ཏན་གཞིར་གྱུར་མའམ།ཡང་ན་གུང་ཐང་རིན་པོ་ཆེས་གསུངས་པ་ལྟར།སངས་རྒྱས་ཐམས་ཅད་འདུས་པའི་སྐུ།།རྡོ་རྗེ་འཛིན་པའི་ངོ་བོ་ཉིད།།དཀོན་མཆོག་གསུམ་གྱི་རྩ་བ་སྟེ།།བླ་མ་རྣམས་ལ་ཕྱག་འཚལ་ལོ།།ཕུན་ཚོགས་དགེ་ལེགས་བྱེ་བས་བསྐྲུན་པའི་སྐུ།།མཐའ་ཡས་འགྲོ་བའི་རེ་བ་སྐོང་བའི་གསུང་།།མ་ལུས་ཤེས་བྱ་ཇི་བཞིན་གཟིགས་པའི་ཐུགས།།ཤཱཀྱའི་གཙོ་བོ་དེ་ལ་ཕྱག་འཚལ་ལོ།།ཞེས་སོགས་རྗེའི་ལམ་རིམ་ཉམས་མགུར་རམ།ཡང་ན་རྗེའི་ལམ་རིམ་བླ་མ་བརྒྱུད་པའི་གསོལ་འདེབས་(རྗེ་རིན་པོ་ཆེས་བྱང་རྭ་སྒྲེང་གི་བྲག་སེང་གེ་འདྲ་བའི་ཞོལ་དུ་གསོལ་འདེབས་འདི་ལྗགས་རྩོམ་མཛད་སྐབས།ཇོ་འབྲོམ་གཉིས་སོགས་ལམ་རིམ་གྱི་བརྒྱུད་པའི་བླ་མ་ཀུན་གྱི་ཞལ་གཟིགས་པས།བྱིན་རླབས་ཤིན་ཏུ་ཆེ་བར་གྲགས) ≪ལམ་མཆོག་སྒོ་འབྱེད≫ཅེས་བྱ་བ་འདིའི་གསོལ་བ་འདེབས་ཞེས་པ་ཚིག་སྣ་བསྒྱུར་ཏེ་ཕྱག་འཚལ་ཞེས་པར་བཏོན་ན་ལེགས་པར་གསུངས།ཕྱག་གྲངས་གསོག་བྱེད་ན།གུང་ཐང་རིན་པོ་ཆེས་གསུངས་པ་ལྟར།ཐོག་མར།ན་མོ་མཉྫུ་ཤྲཱི་ཡེ།ན་མཿསུ་ཤྲཱི་ཡེ།ན་མོ་ཨུཏྟ་མ་ཤྲཱི་ཡེ་སྭཧཱ།ཞེས་པའི་ཕྱག་སྟོང་འགྱུར་གྱི་སྔགས་འདི་ལན་གསུམ་ཙམ་བརྗོད་ན་ལེགས།ཕྱག་དེ་སྡིག་སྒྲིབ་སྦྱོང་བ་ལ་གཙོ་བོར་དམིགས་པ་ཞིག་ཡིན་ན།ལྟུང་བཤགས་དང་འབྲེལ་ནས་གྲངས་གསོག་བྱེད་ན་སྡིག་སྒྲིབ་འདག་པ་ལ་གནད་ཆེའོ།།ཕྱག་འཚལ་བའི་ཚེ་ཝ་འཁྱུག་པ་ལྟར་ལྡང་བ་མྱུར་བ་ཞིག་དགོས།དེ་ལའང་གནད་ཅིག་ཡོད་དེ།སྤྱིར་ཕྱག་འཚལ་བས་ངན་སོང་དུ་མི་སྐྱེ་ཞིང་།སྐྱེས་ཀྱང་མྱུར་དུ་ཐར་བའི་རྟེན་འབྲེལ་ཡོད།ཡང་ཕྱག་འབུལ་ཚེ་དཔྲལ་བ་ས་ལ་མི་ཐུག་པར་སྒུར་ཙམ་སྒུར་ཙམ་བྱས་ན་དམྱལ་བ་མགོ་འཕྱངས་སུ་སྐྱེ་ཞིང་།ཐར་ནས་ཀྱང་སྒུར་སྐྱོན་དུ་སྐྱེ་བར།རྗེ་གུང་ཐང་པ་གསུང་ངོ་།།༼ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནི༽བཅུ་སྟེ།༡གཟུགས་བཟང་ལ་མདོག་གསེར་གྱི་ཁ་དོག་ལྟ་བུར་འགྱུར་བ་དང།༢མཛེས་ཤིང་མིག་ཏུ་སྡུག་པར་འགྱུར་བ་དང།༣སྐད་སྙན་ཞིང་སྨྲ་བ་སྙན་པར་བཟུང་བའི་ཚིག་ཏུ་འགྱུར་བ་དང།༤བག་ཚ་བ་མེད་པར་འཁོར་གྱི་ནང་དུ་འགྲོ་བ་དང།༥ལྷ་དང་མི་རྣམས་དགའ་བར་འགྱུར་བ་དང།༦གཟི་བརྗིད་ཆེན་པོར་འགྱུར་བ་དང།༧གང་ཟག་ནི་འདི་ལྟ་སྟེ།སངས་རྒྱས་བཅོམ་ལྡན་འདས་རྣམས་དང།བྱང་ཆུབ་སེམས་དཔའ་རྣམས་དང།སངས་རྒྱས་ཀྱི་ཉན་ཐོས་རྣམས་དང་འགྲོགས་པར་འགྱུར་བ་དང།༨ལོངས་སྤྱོད་ཆེ་བར་འགྱུར་བ་དང།༩མཐོ་རིས་སུ་སྐྱེ་བར་འགྱུར་བ་དང།༡༠མྱུར་དུ་ཡོངས་སུ་མྱ་ངན་ལས་འདའ་བ་སྟེ།དེ་དག་ནི་དེ་བཞིན་གཤེགས་པའི་མཆོད་རྟེན་ལ་ཕྱག་འཚལ་བའི་ཕན་ཡོན་ནོ། །ཞེས་རྗེ་གུང་ཐང་པས་གསུངས་པ་ལྟར་དང་།ཕན་ཡོན་གཞན་ཡང་འདི་ལྟར།སྡིག་སྒྲིབ་སྦྱོང་ཞིང་ཚོགས་གསོག་པ་དང་།ཚེ་འདིར་ཡང་བད་ཀན་དང་།སྐྲན་ནད།སྙིང་ནད།ཕོ་བའི་ནད་སོགས་ལས་གྲོལ་ཏེ་ལུས་ཁམས་བདེ་ཐང་དུ་གྱུར་ནས་ཚེ་རིང་པོར་འཚོ་བ་དང་།བོད་པའི་ངག་རྒྱུན་ལ།ཕྱག་མང་པོ་འཚལ་མཁན་ལ་སྐྲན་ནད་(ཕྱི་རྒྱལ་བས་“ཁེན་སར”ཟེར་བ་འདི)མི་འབྱུང་ཞེས་བཤད་སྲོལ་ཡོད།དེ་ནི་བདེན་པར་འདུག་སྟེ།ཕྱག་འབུམ་ཐེར་འགའ་ཤས་བཙལ་ནས་སྐྲན་ནད་སེང་དྲག་སོང་བའི་གྲྭ་པ་གཉིས་ཀྱི་ལོ་རྒྱུས་དངོས་སུ་མཐོང་ཐོས་བྱུང་།གཞན་ཡང་ངེད་ཀྱི་དགེ་ཕྲུག་ཅིག་ཕོ་ནད་ཀྱིས་ཡུན་རིང་མནར་ཏེ་སྨན་བཅོས་ཇི་ཙམ་བྱས་ཀྱང་མ་ཕན་པར།མཐར་གནས་མཆོག་རྡོ་རྗེ་གདན་དུ་ཕྱག་འབུམ་ཐེར་འགའ་ཤས་བཙལ་ཏེ་སེང་དྲག་སོང་ནས་གདོང་གི་ཤ་མདོག་ཀྱང་ཤིན་ཏུ་ལེགས་པར་གྱུར།འདི་དག་ནི་དངོས་ཡོད་གནས་ཚུལ་ཡིན་པས་སུས་ཀྱང་བསྙོན་དུ་ག་ལ་ཡོད།ཕྱག་དབྱེ་ན།བསྐུམ་ཕྱག་དང་བསྐྱང་ཕྱག་གཉིས་ཡོད། བསྐུམ་ཕྱག་ནི། ཡན་ལག་ལྔའི་ཕྱག་ཅེས་པ།དཔྲལ་བ།ལག་མཐིལ་གཉིས།པུས་མོ་གཉིས་བཅས་ལྔ་ས་ལ་གཏུགས་ཏེ་ཕྱག་བྱ་བ་ལ་ཟེར།བསྐྱང་ཕྱག་ནི།ལུས་ཐམས་ཅད་ཤིང་སྡོང་འགྱེལ་བ་ལྟར་ཁ་སྦུབ་ཏུ་ས་ལ་ཕབ་སྟེ།ལག་པ་གཉིས་ཐད་ཀར་བསྐྱངས་ཏེ་མགོ་བོའི་ཐད་དུ་ཐལ་མོ་སྦྱར་བ་དང་མཉམ་དུ་དཔྲལ་བ་ས་ལ་གཏུགས་པ་ལ་ཟེར།ཡང་དེ་ལ་དབྱེ་ན།ལུས་ཀྱི་ཕྱགངག་གི་ཕྱགཡིད་ཀྱི་ཕྱག་དང་གསུམ་མོ།།ཡང་ཕྱག་ནི་རྣམ་པ་གཉིས་ཏེ།ཡན་ལག་ལྔས་འཚལ་བ་དང་།སྒྱིད་པ་ལ་འཁྱུད་པས་འཚལ་བའོ།།ཡན་ལག་ལྔའི་ཕྱག་ནི།བསྐུམ་ཕྱག་དང་འདྲ།སྒྱིད་པ་ལ་འཁྱུད་པའི་ཕྱག་ནི།མདུན་དུ་ཙོག་པོར་འདུག་སྟེ་ཐལ་མོ་སྦྱར་ནས།ཕ་རོལ་པོའི་རྐང་པའི་མཁྲིག་མ་གཉིས་ལ་ལག་མཐིལ་གཉིས་འཁྱུད་དེ་རྐང་པ་ལ་སྤྱི་བོས་གཏུགས་པའོ།།སྒྱིད་པ་ལ་འཁྱུད་པའི་ཕྱག་གི་སྐོར་འདི་མཚོ་ཊཱིཀ་སྨད་ཆ་དགེ་སློང་མའི་རྣམ་འབྱེད་ན་གསལ།༼ཕྱག་འཚལ་བའི་སྒྲ་བཤད་ནི༽ཕྱག་ཐལ་མོ་དང་།འཚལ་བ་ནི་འབུལ་བ་སྟེ།ཕྱག་འབུལ་ཞུ་བའི་དོན་དུ་འདོད་པ་དང་།ཡང་ཕྱག་ཅེས་པ་བྱང་བ་དང་།འཚལ་བ་འདོད་པའི་དོན་ལ་སྦྱར་ནས།རང་རྒྱུད་ཀྱི་སྡིག་སྒྲིབ་བྱང་ཞིང་།སྐྱབས་ཡུལ་གྱི་ཡོན་ཏན་འདོད་པའི་དོན་དུ་བཤད་པ་དང་།ཡང་།འགའ་རེས།འཚལ་བ་འབུལ་བའི་དོན་དུ་བྱས་ནས།རང་ཉིད་སྐྱབས་ཡུལ་གྱི་ཕྱག་ཏུ་འབུལ་བའི་དོན་དུ་བཤད་པ་སོགས་མང་།ཁོ་བོ་ལྟར་ན།ཕྱག་ནི་འདུད་པ།འཚལ་བ་ནི་བྱེད་པའི་དོན་ཏེ།འདུད་པ་བྱེད་ཅེས་པའི་དོན་ནོ།།འཚལ་ཞེས་པ་བྱེད་པ་་ལ་འཇུག་པ་ནི།འདུལ་བ་ལུང་གཞི་ལས།ལྷ་བཀའ་བཞིན་འཚལ་ཞེས་གསུངས་པ་ལྟ་བུའོ།།ཞིབ་ཏུ་བཤད་ན།ཕྱག་ནི་ལག་པའི་ཞེ་ས།འཚལ་བ་ནི་བྱེད་པའམ་བགྱིད་པའི་དོན་ཏེ།ལུས་པོ་དུད་དེ་ལག་པས་སྐྱབས་ཡུལ་གྱི་ཞབས་ལ་རེག་ཅིང་གཏུག་པར་བྱེད་པས་ན་དེ་སྐད་ཅེས་བྱའོ།།དེང་སང་ཡང་རྒྱ་གར་གྱི་ཡུལ་སྲོལ་ལ་རང་གི་ཕ་མ་དང་རྒན་རབས་སོགས་ཀྱི་རྐང་པར་ལག་པས་གཏུགས་ཏེ་ཕྱག་བྱ་བའི་སྲོལ་མ་ཉམས་པར་མཐོང་རྒྱུ་ཡོད་ཅིང་།ཡ་རབས་ཀྱི་སྤྱོད་ཚུལ་འདི་ནི།རྒྱ་གར་གྱི་ཐུན་མོང་མ་ཡིན་པའི་གོམས་སྲོལ་ཞིག་སྟེ།འཛམ་གླིང་གི་ཡུལ་གྲུ་གང་དུའང་མཐོང་རྒྱུ་མེད་དོ།།འདི་ཉིད་ལ་དཔེ་བླངས་ཏེ་བོད་ཀྱི་ལོ་ཙཱ་བ་ཆེན་པོ་རྣམས་ཀྱིས།ཕྱག་བྱེད་པའམ་ཕྱག་འཚལ་ཞེས་པའི་ཚིག་འདི་བཟོས་པར་སེམས་སོ།།
+== ཕྱི་ཕྱོགས་དྲ་མཐུད། ==
+* [http://wapexclusive.com.ng/]
+
+[[Category:རྒྱ་གར]]
+[[Category:གྲོང་􀮣]]
